# actions

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  REVIEW.md  SECURITY.md  VERSION  accepted-licenses.txt  index.html  info_pip_audit.json  info_safety.json  pyproject.toml  robots.txt  safety_vs_pip-audit.md  safety_vs_pip-audit_presentation.md  searchindex.js  sitemap.xml  towncrier.toml  towncrier.yoml  tox.ini  versions.json
.ci/ansys-actions/: README.md  README.rst  pyproject.toml
.ci/ansys-actions-flit/: README.rst  pyproject.toml
.ci/ansys-actions-flit/src/ansys/actions/flit/: __init__.py
.ci/ansys-actions-poetry/: README.rst  pyproject.toml
.ci/ansys-actions-poetry/src/ansys/actions/poetry/: __init__.py
.ci/devpi/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
.ci/pyansys-actions/: README.rst  pyproject.toml
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  ci_cd_dependabot.yml  ci_cd_main.yml  ci_cd_night.yml  ci_cd_pr.yml  ci_cd_pr_flit.yml  ci_cd_pr_poetry.yml  ci_cd_release.yml  dependabot_coverage.yml  release.yml
_check-environment-approval/: action.yml
_check-github-permissions/: action.yml
_check-vulnerabilities/: .safety-ignore.yaml  action.yml  ignored-safety.txt
_doc-build-linux/: action.yml
_doc-build-windows/: action.yml
_doc-gen-canonical/: action.yml
_doc-gen-robots/: action.yml
_doc-gen-sitemap/: action.yml
_doc-gen-versions-page/: action.yml
_label-breaking-changes/: action.yml
_logging/: action.yml
_pr-doc-clean/: action.yml
_pr-doc-deployment/: action.yml
_pyansys-dashboard-vulnerabilities-upload/: action.yml
_release-devpi/: action.yml
_release-pypi/: action.yml  requirements.txt
_setup-python/: action.yml
_sources/release-actions/: index.rst.txt
_windows_doc-build/: action.yml
branch-name-style/: action.yml
build-actions/: index.html
build-ci-wheels/: action.yml
build-library/: action.yml  requirements-pip.txt  requirements-uv.txt  requirements.txt
build-sbom/: action.yml
build-wheelhouse/: action.yml  requirements.txt  smoke_test.py
changelog-style/: action.yml
check-actions-security/: action.yml  actions.yml  requirements.txt  zizmor-summary.py  zizmor.yml
check-branch-name/: action.yml
check-environment-approval/: action.yml
check-licenses/: accepted-licenses.txt  action.yml  check_licenses.py  ignored-packages.txt  requirements.txt
check-pr-conventional-name/: action.yml
check-pr-title/: action.yml
check-vulnerabilities/: .safety-ignore.yml  CUSTOM_SAFETY_POLICY_EXAMPLE.md  README.md  action.yml  check_vulnerabilities.py  default_safety_policy.yaml  ignored-safety.txt  requirements.txt
code-style/: action.yml  requirements-pre-commit.txt  requirements-prek.txt  requirements.txt
commit-style/: action.yml
determine-environment-approval/: action.yml
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/_sources/: index.rst.txt
dev/_static/: documentation_options.js
dev/build-actions/: index.html
dev/doc-actions/: index.html
dev/housekeeping-actions/: index.html
dev/licenses-actions/: index.html
dev/release-actions/: index.html
dev/style-actions/: index.html
dev/tests-actions/: index.html
doc/: .vale.ini  Makefile  make.bat
doc-build/: action.yml  parse_doc_conf.py  parse_pr_title.py
doc-changelog/: action.yml  parse_pr_title.py  requirements.txt
doc-deploy-changelog/: action.yml  requirements.txt
doc-deploy-custom-path/: action.yml
doc-deploy-dev/: action.yml  versions.html  versions.js
doc-deploy-dev-index/: action.yml
doc-deploy-index/: action.yml
doc-deploy-pr/: action.yml
doc-deploy-stable/: action.yml  requirements.txt
doc-deploy-stable-index/: action.yml  actions.yml
doc-deploy-to-repo/: action.yml
doc-style/: action.yml  requirements.txt
doc/source/: changelog.rst  cheat_sheet.jinja  cheat_sheet.qmd  cheat_sheet.qmd.tpl  cheat_sheet_new.qmd  conf.py  index.rst  migration_guide.rst
doc/styles/: .gitignore
docker-style/: action.yml
hk-automerge-prs/: action.yml
hk-migrate-fork-pr/: README.md  action.yml
hk-package-clean-except/: action.yml  requirements.txt
hk-package-clean-untagged/: action.yml  requirements.txt
hk-tag-repository-version/: action.yml
licenses-actions/: index.html
lint-dockerfile/: action.yml
package-clean-except/: action.yml
pr-conventional-name/: action.yml
pull/1045/: changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
pull/1108/: changelog.html  genindex.html  index.html  search.html  searchindex.js
pull/1168/: changelog.html  genindex.html  objects.inv  search.html  searchindex.js
pull/1265/: changelog.html  index.html  objects.inv
pull/802/: changelog.html  index.html  objects.inv  searchindex.js
pull/828/: changelog.html  genindex.html  index.html  objects.inv  search.html  (+1 more)
python-utils/: default_template.jinja  doc_deploy_changelog_utils.py  hk_package_clean_except.py  hk_package_clean_untagged.py  parse_doc_conf.py  parse_pr.py  parse_pr_title.py  parse_pyproject.py  release_github_utils.py  remove_closed_pr_deployed_doc.py  test_versions.py  test_versions_new.py  update_tag_references.py  update_version.py  versions.py  zizmor-summary.py
release/: announcement.html  versions.json
release-github/: action.yml  requirements.txt
release-private/: action.yml
release-public/: action.yml
release-pypi-private/: action.yml
release-pypi-public/: action.yml
release-pypi-test/: action.yml
requirements/: requirements_code_style.txt  requirements_doc.txt  requirements_pytest.txt
scripts/: index.html  redirect.html  version-mapper.py  version_mapper.py
style/: code-style-pre-commit.yml  code-style-tox.yml  doc-style-vale.yml
style-actions/: index.html
tag-repository-version/: README.md  action.yml
tests-pytest/: action.yml  requirements.txt
tests/pyansys-actions/: pyproject.toml
types/: action.yml
version/: index.html
(+1204 files in other folders)
