# This project file exists solely for two reasons: managing the python package dependencies for each action; and
# specifying the towncrier configuration

[project]
name = "ansys-actions-ci-dependencies"
version = "10.4.dev0"
requires-python = ">=3.10"

[dependency-groups]
build-library = [
    "build<=1.5.0",
    "twine<=6.2.0",
]
build-wheelhouse = [
    "build<=1.5.0",
    "wheel<=0.47.0",
]
check-licenses = [
    "pip-licenses<=5.5.5",
    "prettytable<=3.17.0",
    "wcwidth<=0.7.0",
]
check-vulnerabilities = [
    "bandit>=1.9.4,<2",
    "click>=8.3.3,<9",
    "pygithub>=2.9.1,<3",
    "safety>=3.7.0,<4",
]
code-style = [
    "pre-commit<=4.6.0",
    "prek<=0.4.1",
]
doc-changelog = [
    "tomlkit<=0.15.0",
    "towncrier<=25.8.0",
]
doc-deploy-changelog = [
    "tomlkit<=0.15.0",
    "towncrier<=25.8.0",
]
doc-deploy-stable = [
    "packaging<=26.2",
]
doc-style = [
    "docutils<=0.22.4",
    "tomlkit<=0.15.0",
]
hk-package-clean-except = [
    "fastcore<=1.13.2",
    "ghapi<=1.0.13",
    "packaging<=26.2",
]
hk-package-clean-untagged = [
    "fastcore<=1.13.2",
    "ghapi<=1.0.13",
    "packaging<=26.2",
]
release-github = [
    "pypandoc-binary<=1.17",
    "tomlkit<=0.15.0",
]
release-pypi = [
    "twine<=6.2.0",
]
tests-pytest = [
    "pytest-randomly<=4.1.0",
]

[tool.towncrier]
package = "ansys.actions.core"
package_dir  = ".ci/ansys-actions/src"
directory = "doc/source/changelog"
filename = "doc/source/changelog.rst"
template = "doc/source/changelog/template"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/actions/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/actions/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
