# This project file exists solely for two reasons: managing the python package dependencies for each action; and
# specifying the towncrier configuration

[project]
name = "ansys-actions-ci-dependencies"
version = "10.4.dev0"
requires-python = ">=3.10"

[dependency-groups]
build-library-pip = [
    "build<=1.5",
    "twine<=6.2",
]
build-library-uv = [
    "twine<=6.2",
]
build-wheelhouse = [
    "build<=1.5",
    "wheel<=0.47",
]
check-licenses = [
    "pip-licenses<=5.6",
    "prettytable<=3.17",
    "wcwidth<=0.9",
]
check-vulnerabilities = [
    "bandit>=1.9,<2",
    "click>=8.4.1,<9",
    "pygithub>=2.9,<3",
    "safety>=3.8.1,<4",
]
code-style-pre-commit = [
    "pre-commit<=4.6",
]
code-style-prek = [
    "prek<=0.5",
]
doc-changelog = [
    "tomlkit<=0.15",
    "towncrier<=25.8",
]
doc-deploy-changelog = [
    "tomlkit<=0.15",
    "towncrier<=25.8",
]
doc-deploy-stable = [
    "packaging<=26.2",
]
doc-style = [
    "docutils<=0.23",
    "tomlkit<=0.15",
]
hk-package-clean-except = [
    "fastcore<=1.14",
    "ghapi<=1.1",
    "packaging<=26.2",
]
hk-package-clean-untagged = [
    "fastcore<=1.14",
    "ghapi<=1.1",
    "packaging<=26.2",
]
release-github = [
    "pypandoc-binary<=1.17",
    "tomlkit<=0.15",
]
release-pypi = [
    "twine<=6.2",
]
tests-pytest = [
    "pytest-randomly<=4.1",
]

[tool.towncrier]
package = "ansys.actions.core"
package_dir  = ".ci/ansys-actions/src"
directory = "doc/source/changelog"
filename = "doc/source/changelog.rst"
template = "doc/source/changelog/template"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/actions/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/actions/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[tool.ruff]
line-length = 100
fix = true
target-version = "py314"
lint.select = [
  "D",   # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "E",   # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F",   # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I",   # isort, see https://docs.astral.sh/ruff/rules/#isort-i
  "N",   # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "PTH", # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "TD",  # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
lint.ignore = []
lint.pydocstyle.convention = "numpy"
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
