# This project file exists solely for two reasons: managing the python package dependencies for each action; and
# specifying the towncrier configuration

[project]
name = "ansys-actions-ci-dependencies"
version = "10.4.dev0"
requires-python = ">=3.10"

[dependency-groups]
build-library-pip = [
    "build<=1.5",
    "twine<=6.2",
]
build-library-uv = [
    "twine<=6.2",
]
build-wheelhouse = [
    "build<=1.5",
    "wheel<=0.47",
]
check-licenses = [
    "pip-licenses<=5.6",
    "prettytable<=3.18",
    "wcwidth<=0.9",
]
check-vulnerabilities = [
    "bandit>=1.9,<2",
    "click>=8.4.1,<9",
    "pygithub>=2.9,<3",
    "safety>=3.8.1,<4",
]
code-style-pre-commit = [
    "pre-commit<=4.6",
]
code-style-prek = [
    "prek<=0.5",
]
doc-changelog = [
    "tomlkit<=0.15",
    "towncrier<=25.8",
]
doc-deploy-changelog = [
    "tomlkit<=0.15",
    "towncrier<=25.8",
]
doc-deploy-stable = [
    "packaging<=26.2",
]
doc-style = [
    "docutils<=0.23",
    "tomlkit<=0.15",
]
hk-package-clean-except = [
    "fastcore<=1.14.5",
    "ghapi<=1.1",
    "packaging<=26.2",
]
hk-package-clean-untagged = [
    "fastcore<=1.14.5",
    "ghapi<=1.1",
    "packaging<=26.2",
]
release-github = [
    "pypandoc-binary<=1.17",
    "tomlkit<=0.15",
]
check-actions-security = [
    "zizmor<=1.27",
]
release-pypi = [
    "twine<=6.2",
]
tests-pytest = [
    "pytest-randomly<=4.1",
]

[tool.towncrier]
package = "ansys.actions.core"
package_dir  = ".ci/ansys-actions/src"
directory = "doc/source/changelog"
filename = "doc/source/changelog.rst"
template = "doc/source/changelog/template"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/actions/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/actions/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
