[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-actions-core"
version = "8.1.9"
description = "A demo library for testing Ansys actions"
readme = "README.rst"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [
    { name = "PyAnsys developers", email = "pyansys.core@ansys.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["importlib-metadata >=4.0"]

[tool.flit.module]
name = "ansys.actions.core"

[project.urls]
Source = "https://github.com/ansys/actions"
Documentation = "https://actions.docs.ansys.com"
